# text_painter

./: .gitignore  .rustfmt.toml  Cargo.toml
examples/: attrs.rs  basic.rs  builder.rs  color256.rs  rgb.rs
scripts/: run_all_examples.sh
src/: attr.rs  color.rs  lib.rs  macros.rs  style.rs  tests.rs
